second commit, added liquibase, dockerfile and application jar

--- a/Choir/src/main/resources/application.properties
+++ b/Choir/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+##liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db.changelog/changelog-master.xml
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc\:mysql\://localhost\:3306/choir?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc\:mysql\://mysql-standalone\:3306/choir?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = root
 
@@ -12,3 +16,5 @@ spring.jpa.hibernate.show_sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
